Update gentoo tutorial with the first chapter done

--- a/css/gentoo.css
+++ b/css/gentoo.css
@@ -1,16 +1,28 @@
 * {
-    font-size: 20px;
-    background-color: bisque;
-    text-align: center;
+  font-size: 16px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
-.borderlands {
-    border-left: 10px;
-    border-right: 10px;
-    margin-left: 500px;
-    margin-right: 500px;
-}
 .disclaimer {
-    font-weight: 500;
-    font-size: 15px;
+  font-weight: 500;
+  font-size: 13px;
+  text-align: center;
+}
+
+.cmd-box {
+  color: black;
+  border-radius: 4px;
+  padding: 1em;
+  margin-bottom: 10px;
+  overflow: auto;
+  border: solid 1px gray;
+}
+
+.container {
+  padding-right: 15px;
+  padding-left: 15px;
+  margin-right: auto;
+  margin-left: auto;
+  box-sizing: border-box;
+  width: 1170px;
 }
