--- a/css/homepage.css
+++ b/css/homepage.css
@@ -5,15 +5,46 @@
     padding-top: 100px;
 }
 
-.teste{
-    color: white;
+.search{
+    color: rgba(255, 255, 255, 0.671);
     font-family: Georgia, 'Times New Roman', Times, serif;
-    font-size: 60px;
-    text-align: center;
+    font-size: 18px;
+    margin-top: 13px;
+    margin-left: 20px;
 }
 
 .adjust{
     width: 1080px;
+    height: 70px;
     position: fixed;
     margin-top: 100px;
+    background-color: rgba(49, 49, 49, 0.548);
+    border: 1px solid rgb(80, 80, 80);
+    border-radius: 20px;
+}
+
+.search_field{
+    background-color: transparent;
+    font-size: 18px;
+    color: white;
+    border: none;
+    margin-left: 40px;
+    width: 700px;
+}
+
+.search_submit{
+    font-size: 18px;
+    margin-left: 10px;
+    padding: 10px;
+    color: white;
+    background-color: rgb(146, 3, 151);
+    border: none;
+    border-radius: 10px;
+    transition: transform .5s;
+}
+
+.search_submit:hover{
+    transform: scale(1.05); 
+    cursor: pointer;
+    background-color:rgb(182, 57, 231);
 }
