--- a/css/homepage.css
+++ b/css/homepage.css
@@ -28,13 +28,18 @@
     font-size: 18px;
     color: white;
     border: none;
-    margin-left: 40px;
+    margin-left: 20px;
     width: 700px;
+}
+
+.search_field:focus{
+    outline: 1px solid rgb(182, 57, 231);
+    border-radius: 3px;
 }
 
 .search_submit{
     font-size: 18px;
-    margin-left: 10px;
+    margin-left: 30px;
     padding: 10px;
     color: white;
     background-color: rgb(146, 3, 151);
