Adjust media query in the home page website

--- a/css/header.css
+++ b/css/header.css
@@ -65,3 +65,13 @@
 }
 /* conteudo barra */
 
+
+@media screen and (max-width: 1440px) {
+    .central{
+        max-width: 800px;
+    }
+
+    .logo{
+        width: 480px;
+    }
+}
