--- a/css/footer.css
+++ b/css/footer.css
@@ -27,3 +27,9 @@ footer{
     color: rgb(200, 62, 255);
     transition: 300ms linear;
 }
+
+@media screen and (max-width: 1440px) {
+    .footer_adjust{
+        max-width: 800px;
+    }
+}
