--- a/css/search.css
+++ b/css/search.css
@@ -51,3 +51,13 @@
     cursor: pointer;
     background-color:rgb(182, 57, 231);
 }
+
+@media screen and (max-width: 1440px) {
+    .adjust{
+        width: 800px;
+    }
+
+    .search_field{
+        width: 450px;
+    }
+}
