--- a/css/trending.css
+++ b/css/trending.css
@@ -19,7 +19,7 @@
     font-size: 28px;
     text-transform: uppercase;
     letter-spacing: 3px;
-    margin-left: 2px;
+    margin-left: 4px;
 }
 
 .trending_thumb{
@@ -83,5 +83,9 @@ hr{
 
     hr{
         max-width: 676px;
+    }
+
+    .trending_title{
+        margin-left: 2px;
     }
 }
