--- a/css/footer.css
+++ b/css/footer.css
@@ -1,15 +1,15 @@
 footer{
-    width: 100%;
-    height: 91px;
     background-color: rgba(153, 153, 153, 0.11);
 }
+
 .footer_adjust{
     max-width: 1000px;
     margin: 0 auto;
+    text-align: center;
+    padding: 15px 0;
 }
 
 .footer_developers{
-    padding-top: 15px;
     padding-bottom: 5px;
 }
 
@@ -27,6 +27,7 @@ footer{
     color: rgb(200, 62, 255);
     transition: 300ms linear;
 }
+
 
 @media screen and (max-width: 1440px) {
     .footer_adjust{
