--- a/css/header.css
+++ b/css/header.css
@@ -26,6 +26,7 @@
     top: 0;
     background: rgba(153, 153, 153, 0.11);
     backdrop-filter: blur(10px);
+    margin-bottom: 60px;
 }
 
 .central{
