Add content of the html guide and settings better the names of archives

--- a/css/pages.css
+++ b/css/pages.css
@@ -49,6 +49,10 @@
   width: 1170px;
 }
 
+.structures, .head{
+  margin-top: 20px;
+}
+
 @media screen and (max-width: 1440px) {
   .container{
     margin: 0 60px;
