--- a/css/register.css
+++ b/css/register.css
@@ -1,6 +1,6 @@
 .register-container{
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 750px;
     display: flex;
     align-items: center;
     justify-content: center;
