--- a/css/pages.css
+++ b/css/pages.css
@@ -1,5 +1,5 @@
 * {
-  font-family: Georgia, "Times New Roman", Times, serif;
+  font-family: var(--font-text);
   color: rgb(255, 255, 255);
 }
 
@@ -11,7 +11,8 @@
 }
 
 .title_main{
-  font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  font-family:var(--font-text);
+  font-weight: 500;
   text-align: center;
   font-size: 38px;
   padding-bottom: 5px;
