--- a/css/search.css
+++ b/css/search.css
@@ -6,7 +6,7 @@
 
 .search_text{
     color: rgba(255, 255, 255, 0.671);
-    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-family: var(--font-text);
     font-size: 18px;
     margin-top: 13px;
     margin-left: 20px;
@@ -36,7 +36,6 @@
 
 .search_submit{
     font-size: 18px;
-    margin-left: 20px;
     padding: 10px;
     color: white;
     background-color: rgb(146, 3, 151);
