--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,3 +1,6 @@
+@use 'variables'; 
+@use 'theme';  
+
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +11,6 @@ html, body, #app {
   height: 100%;
   width: 100%;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica, Arial, sans-serif;
-  background-color: #f4f4f4; 
-  color: #333;
+  background-color: var(--background-color); 
+  color: var(--text-color);
 }
