--- a/src/style/_theme.scss
+++ b/src/style/_theme.scss
@@ -7,6 +7,19 @@
   --input-border-color: #ccc;
   --link-color: #333;
   --link-hover-color: #007bff;
+  --search-bg-color: #f7f7f7;
+  --search-border-color: #e0e0e0;
+  --search-hover-color: #eaeaea;
+  --search-text-color: #222;
+  
+}
+
+body:not(.dark-theme) .search-results li:hover {
+  background: var(--search-hover-light);
+}
+
+body:not(.dark-theme) .search-results a {
+  color: var(--search-text-light);
 }
 
 .dark-theme {
@@ -18,4 +31,9 @@
   --input-border-color: #555;
   --link-color: #f5f5f5;
   --link-hover-color: #58a6ff;
+  --link-hover-color: #58a6ff;
+  --search-bg-color: #23272b;
+  --search-border-color: #333;
+  --search-hover-color: #2b3035;
+  --search-text-color: #f5f5f5;
 }
